# webqual-filter

./: webqual-filter.cabal
src/: Filter.hs  Hash.hs  Main.hs
